# Agent-Ai-5

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MCP-INTEGRATION-GUIDE.md  README.md  docker-compose.mcp.yml  docker-compose.stable.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml  security.yml
.github/workflows/: ci.yml  dependencies.yml  quality.yml  release.yml
OpenWebUiTools/: basic_tools.py  example_emmiter.py  weather_tool.py
docs/archive/: MCP-INTEGRATION-GUIDE.md  WARP.md  docker-compose.yml
mcp-client/: Cargo.toml  README.md
mcp-client/src/: main.rs  mcp.rs  ollama.rs
mcp-client/tests/: integration_tests.rs
mcp-http-bridge/: Cargo.toml  Dockerfile  README.md  deny.toml
mcp-http-bridge/src/: lib.rs  main.rs  mcp_client.rs  openapi.rs  tests.rs
mcp-http-bridge/tests/: integration_tests.rs
mcp-http-bridge/tests/common/: mod.rs
mcp-server/: .dockerignore  Cargo.toml  Dockerfile  README.md  TESTING.md
mcp-server/src/: lib.rs  main.rs
mcp-server/src/context/: mod.rs  neo4j.rs
mcp-server/src/mcp/: mod.rs  plugin_params.rs  plugin_registry.rs  types.rs
mcp-server/src/plugins/: home_assistant.rs  http.rs  mod.rs  neo4j.rs  system_info.rs
mcp-server/src/tools/: mod.rs  plugin_tools.rs
mcp-server/tests/: integration_tests.rs
mcp-server/tests/integration/: mod.rs  server_tests.rs
