[package]
name = "mcp-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcp-server"
path = "src/main.rs"

[lib]
name = "mcp_server"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
async-trait = "0.1"
axum = "0.6"
tower-http = { version = "0.4", features = ["cors"] }
tower = "0.4"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.29"
neo4rs = "0.7"
lazy_static = "1.4"
dotenv = "0.15"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
tempfile = "3.8"
assert_matches = "1.5"
rstest = "0.18"
wiremock = "0.5"

[profile.release]
strip = true
lto = true
codegen-units = 1